new update in footer

--- a/home.html
+++ b/home.html
@@ -138,9 +138,17 @@
         </table>
     </div>
      <div id="built">
-         <div><img src=""></div>
+         <div><p>DOWNLOAD THE APP</p></div>
+         <div class="box">
+        <div><button id="size"><i class="fa fa-playstore">GEt it on playStore</i></button></div>
+        </div>
+         <div id="box2">
+            <div><button id="size2"><i class="fa fa-playstore">Now Available <br>on AppStore</i></button></div>
+         </div>
      </div>
-
+     <div class="copyright">
+        <span style="color: white; text-align: center;">© 2022 Imagine Marketing Limited. All Rights Reserved.</span>
+     </div>
       
         </div>
         
