--- a/home.html
+++ b/home.html
@@ -56,13 +56,15 @@
               <button type = "submit" class = "search-btn btn" id = "search-btn" style="background-color: black;border: 1px solid red;color: white;border-radius: 2px;">SUBSCRIBE</button>
             </div>
         </div>
+        <!-- icon is not getting display please add  -->
         <div class="icons">
-            <i class="fa fa-facebook">facebook</i>
-            <i class="fa fa-facebook">facebook</i>
-            <i class="fa fa-facebook">facebook</i>
-            <i class="fa fa-facebook">facebook</i>
-            <i class="fa fa-facebook">facebook</i>
+           <div><a href="https://twitter.com/RockWithboAt"><i class="fa fa-facebook">twitter</i></a></div> 
+           <div><a href="https://www.facebook.com/boat.nirvana/"><i class="fa fa-facebook">facebook</i></a></div> 
+           <div><a href="https://www.youtube.com/channel/UCY3JXaO_v8H3E6hTYUp5qWQ"><i class="fa fa-facebook">Youtube</i></a></div> 
+           <div><a href="https://www.instagram.com/boat.nirvana/"><i class="fa fa-facebook">Instagram</i></a></div> 
+           <div><a href="https://in.linkedin.com/company/boat-lifestyle"><i class="fa fa-facebook">Linkedin</i></a></div> 
         </div>
+        <!-- plaese give some spaces between the row head in table make it more attractive please -->
         <div id="f-cont">
         <table>
             <thead>
@@ -142,6 +144,7 @@
          <div class="box">
         <div><button id="size"><i class="fa fa-playstore">GEt it on playStore</i></button></div>
         </div>
+        <!-- left playstore icon and AppleStore icon in button please if you can do it please... -->
          <div id="box2">
             <div><button id="size2"><i class="fa fa-playstore">Now Available <br>on AppStore</i></button></div>
          </div>
