--- a/home.html
+++ b/home.html
@@ -124,6 +124,9 @@
         <div id="Blogs-heading">
             <a href="https://www.boat-lifestyle.com/blogs/blog"><h1>boAtBlog</h1></a>
             <div id="containers"></div>
+            <br>
+            <br>
+            <div class="line" style="width: 60%;margin-left: 5px;background-color : red;"></div>
      </div>
 
 
@@ -298,9 +301,9 @@
           }
       setInterval(slides, 2000);
     //   productblog
-      var img_array = ["https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-TWS.png?v=1612338251",
-                       "https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Rectangle271.png?v=1612338387",   
-                         "https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/pro_gear.jpg?v=1644836883"
+      var img_array = ["https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Earphone_1296x_386bed9a-346e-4cb5-bad9-c075cc0b170c_460x.jpg?v=1633939293",
+                       "https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Main-banner_520x500_6852bb3b-c6d3-4588-8df9-2075ffada63a_460x.jpg?v=1639552370",   
+                         "https://cdn.shopify.com/s/files/1/0057/8938/4802/articles/BLAZE-BLOG_460x.jpg?v=1646201420"
                 ];
 
             let container = document.getElementById("containers");
