--- a/home.html
+++ b/home.html
@@ -129,7 +129,20 @@
             <div class="line" style="width: 60%;margin-left: 5px;background-color : red;"></div>
      </div>
 
-
+<!-- Adversiment of boat -->
+<div class="img_container">
+    <h1 style="font-family: cursive;text-align: center;color: blanchedalmond;">In the press</h1>
+    <h2 style="font-family: cursive;text-align: center;color: whitesmoke;">" "</h2>
+    <p style="font-family: cursive;text-align: center;color: thistle;">The Airpod441 is sweat proof and pack in crisps audio.Great for<br>fitness.</p>
+    <div id="img_flex">
+        <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/mint.png?v=1610353880" alt="mint"></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Forbes_1.png?v=1610015636" alt="mint"></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/techradar_1.png?v=1610015636" alt="mint"></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/ET_1.png?v=1610015636" alt="mint"></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/gadgets360_1.png?v=1610015636" alt="mint"></div>
+ </div>
+<div class="magi"><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Fotter-Awards_11-02-2022_900x.png?v=1644572316" alt="all"></div> 
+</div>
         <!-- footer section -->
      
      
