--- a/home1.html
+++ b/home1.html
@@ -61,7 +61,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
           <div class="box box-1">
@@ -78,7 +78,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
           <div class="box box-1">
@@ -95,7 +95,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
           <div class="box box-1">
@@ -112,7 +112,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
         </div>
@@ -136,7 +136,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
           <div class="box box-2">
@@ -153,7 +153,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
           <div class="box box-2">
@@ -170,7 +170,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
           <div class="box box-2">
@@ -187,7 +187,7 @@
                 <li>Uninterrupted listening for 3 hours</li>
                 <li>Truly wireless at a truly awesome price</li>
               </ul>
-              <button class="cart-btn">Add to cart</button>
+              <button class="cart-btn" type="button">Add to cart</button>
             </div>
           </div>
         </div>
@@ -245,7 +245,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-4">
@@ -262,7 +262,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-4">
@@ -279,7 +279,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-4">
@@ -296,7 +296,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-4">
@@ -313,7 +313,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-4">
@@ -330,7 +330,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
             </div>
@@ -354,7 +354,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-5">
@@ -371,7 +371,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-5">
@@ -388,7 +388,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-5">
@@ -405,7 +405,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-5">
@@ -422,7 +422,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
               <div class="box box-5">
@@ -439,7 +439,7 @@
                     <li>Uninterrupted listening for 3 hours</li>
                     <li>Truly wireless at a truly awesome price</li>
                   </ul>
-                  <button class="cart-btn">Add to cart</button>
+                  <button class="cart-btn" type="button">Add to cart</button>
                 </div>
               </div>
             </div>
