created moving text animation and daily deals new page

--- a/home1.html
+++ b/home1.html
@@ -41,6 +41,13 @@
           />
         </div>
       </div>
+      <div class="news-sticker">
+        <marquee behavior="" direction="" scrollamount="10" id="marquee-text">
+        FLAUNT YOUR FITNESS <span class="text-stroke">FLAUNT YOUR FITNESS</span>
+        FLAUNT YOUR FITNESS <span class="text-stroke">FLAUNT YOUR FITNESS</span>
+        FLAUNT YOUR FITNESS <span class="text-stroke">FLAUNT YOUR FITNESS</span>
+        </marquee>
+      </div>
       <!--Best seller section-->
       <div class="container">
         <h1 id="heading-1">BEST SELLER</h1>
