Created full daily deals page

--- a/dailydeals.html
+++ b/dailydeals.html
@@ -8,8 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="main-nav">
+    <div class="main-div">
       <div class="nav-header"></div>
+      <div class="bodydiv"></div>
     </div>
     <script type="module" src="./dailydeals.js"></script>
   </body>
