do hat floate page

--- a/home1.html
+++ b/home1.html
@@ -748,11 +748,11 @@
 <div id="built">
    <div><p>DOWNLOAD THE APP</p></div>
    <div class="boltbox">
-  <div><button id="size"><i class="fa fa-playstore">GEt it on playStore</i></button></div>
+  <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/google-play.png?v=1608620293" alt=""></div>
   </div>
   <!-- left playstore icon and AppleStore icon in button please if you can do it please... -->
    <div id="box2">
-      <div><button id="size2"><i class="fa fa-playstore">Now Available <br>on AppStore</i></button></div>
+      <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/app-store.png?v=1608620293" alt=""></div>
    </div>
 </div>
 <div class="copyright">
