--- a/home.html
+++ b/home.html
@@ -192,8 +192,8 @@
         </div>
         <!-- icon is not getting display please add  -->
         <div class="icons">
-           <div><a href="https://twitter.com/RockWithboAt"><i class="fa fa-facebook">twitter</i></a></div> 
-           <div><a href="https://www.facebook.com/boat.nirvana/"><i class="fab fa-facebook-f"></i></a></div> 
+           <div><a href="https://twitter.com/RockWithboAt"><ion-icon name="logo-twitter"></ion-icon></a></div> 
+           <div><ion-icon name="logo-facebook"></ion-icon></div> 
            <div><a href="https://www.youtube.com/channel/UCY3JXaO_v8H3E6hTYUp5qWQ"><i class="fa fa-facebook">Youtube</i></a></div> 
            <div><a href="https://www.instagram.com/boat.nirvana/"><i class="fa fa-facebook">Instagram</i></a></div> 
            <div><a href="https://in.linkedin.com/company/boat-lifestyle"><i class="fa fa-facebook">Linkedin</i></a></div> 
