--- a/home1.html
+++ b/home1.html
@@ -11,8 +11,7 @@
   <body>
     <div class="main-div">
       <!---Navbar Section-->
-      <div class="nav-header">
-      </div>
+      <div class="nav-header"></div>
       <!--Slider section-->
 
       <div class="slider">
@@ -539,8 +538,8 @@
       
   <!-- icon is not getting display please add  -->
   <div class="icons1">
-     <div><a href="https://twitter.com/RockWithboAt"><i class="fab fa-facebook-f">Twitter</i></a></a></div> 
-     <div><a href="https://www.facebook.com/boat.nirvana/"><i class="fab fa-facebook-f">facebook</i></a></div> 
+     <div><a href="https://twitter.com/RockWithboAt"><i class="fa fa-facebook">twitter</i></a></div> 
+     <div><a href="https://www.facebook.com/boat.nirvana/"><i class="fab fa-facebook-f"></i></a></div> 
      <div><a href="https://www.youtube.com/channel/UCY3JXaO_v8H3E6hTYUp5qWQ"><i class="fa fa-facebook">Youtube</i></a></div> 
      <div><a href="https://www.instagram.com/boat.nirvana/"><i class="fa fa-facebook">Instagram</i></a></div> 
      <div><a href="https://in.linkedin.com/company/boat-lifestyle"><i class="fa fa-facebook">Linkedin</i></a></div> 
@@ -550,11 +549,11 @@
 <div id="built">
    <div><p>DOWNLOAD THE APP</p></div>
    <div class="boltbox">
-  <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/google-play.png?v=1608620293" alt=""></div>
+  <div><button id="size"><i class="fa fa-playstore">GEt it on playStore</i></button></div>
   </div>
   <!-- left playstore icon and AppleStore icon in button please if you can do it please... -->
    <div id="box2">
-      <div><img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/app-store.png?v=1608620293" alt=""></div>
+      <div><button id="size2"><i class="fa fa-playstore">Now Available <br>on AppStore</i></button></div>
    </div>
 </div>
 <div class="copyright">
