--- a/login.html
+++ b/login.html
@@ -167,7 +167,7 @@ more.addEventListener("mouseenter", function (e) {
 
     li.textContent = morelists[i];
     a.append(li);
-    ul.append(li);
+    ul.append(a);
   }
   div.append(ul);
 
