--- a/account.html
+++ b/account.html
@@ -172,7 +172,7 @@ more.addEventListener("mouseenter", function (e) {
 
     li.textContent = morelists[i];
     a.append(li);
-    ul.append(li);
+    ul.append(a);
   }
   div.append(ul);
 
