--- a/payment.html
+++ b/payment.html
@@ -107,6 +107,12 @@
           alert("please fill the details properly");
         }
       });
+      function displaycarditems(data) {
+        let spancart = document.querySelector(".cart-item");
+        spancart.textContent = data.length;
+      }
+      let cartitems = JSON.parse(localStorage.getItem("cartitems"));
+      displaycarditems(cartitems);
     </script>
   </body>
 </html>
