--- a/sunburn.html
+++ b/sunburn.html
@@ -13,7 +13,7 @@
 <body>
     <div id = "header"></div>
     <div id = "heading">
-        <a href = "home1.html">Home</a>
+        <a href = "index.html">Home</a>
         <div>/ boAt x Sunburn</div>
     </div>
     <h1>boAt x Sunburn</h1>
