--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
     });
 
     if (f == 1) {
-      window.location.href = "home1.html";
+      window.location.href = "index.html";
     } else {
       alert("wrong email & password !");
     }
