--- a/dailydeals.html
+++ b/dailydeals.html
@@ -13,7 +13,7 @@
     <div class="main-div">
       <div class="nav-header"></div>
       <div id="heading">
-        <a href="home1.html">Home</a>
+        <a href="index.html">Home</a>
         <div>/ Daily Deals</div>
       </div>
       <h1>Daily Deals</h1>
